# BOF

./: .gitattributes  README.md  demo.py  evaluation.py  requirements.txt
contrib/: aux.py  map.py  parameter_sets.py  penalty_functions.py  vb.py
sor/: CMakeLists.txt  Makefile  image.c  solver.c  solver.h  solver_py.c
